--- a/Jscript/index.html
+++ b/Jscript/index.html
@@ -39,6 +39,14 @@
 		<li>
 			<a href="./js08_operacionesEntreInput">Operaciones entre input</a>
 		</li>
+
+		<li>
+			<a href="./js09_convertirEnMayuscula">Convertir a mayusculas</a>
+		</li>
+
+		<li>
+			<a href="./js10_variableObjetoDato">Ejercicio 10</a>
+		</li>
 	</ul>
 
 </body>
