--- a/Jscript/index.html
+++ b/Jscript/index.html
@@ -47,6 +47,10 @@
 		<li>
 			<a href="./js10_variableObjetoDato">Ejercicio 10</a>
 		</li>
+
+		<li>
+			<a href="./js11_formConfirmacion">FormConfirmacion</a>
+		</li>
 	</ul>
 
 </body>
