--- a/index.html
+++ b/index.html
@@ -1,57 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<title>Menu de ejercicios Java script</title>
+<head> 
+	<title>Menu de Ejercicios</title>
+
 	<meta charset="utf-8">
 </head>
+
 <body>
-	<h1>Lista de jercicios</h1>
+	<h1>
+		Indice de carpetas de ejercicios Laboratorio III
+	</h1>
 
-	<ul>
-		<li>
-			<a href="./js01_sentencias">Sentencias</a>
-		</li>
-
-		<li>
-			<a href="./js02_Comando_en_evento">Comandos en evento</a>
-		</li>
-
-		<li>
-			<a href="./js03_variablesSimples">Variables simples</a>
-		</li>
-
-		<li>
-			<a href="./js04_arreglos">Arreglos</a>
-		</li>
-
-		<li>
-			<a href="./js05_alcance">Alcance</a>
-		</li>
-
-		<li>
-			<a href="./js06_operacionesSobreInput">Operaciones sobre input</a>
-		</li>
-
-		<li>
-			<a href="./js07_funcionesCompartidas">Funciones Compartidas</a>
-		</li>
-
-		<li>
-			<a href="./js08_operacionesEntreInput">Operaciones entre input</a>
-		</li>
-
-		<li>
-			<a href="./js09_convertirEnMayuscula">Convertir a mayusculas</a>
-		</li>
-
-		<li>
-			<a href="./js10_variableObjetoDato">Ejercicio 10</a>
-		</li>
-
-		<li>
-			<a href="./js11_formConfirmacion">FormConfirmacion</a>
-		</li>
-	</ul>
-
+	<li>
+		<a href="./Css">
+			Css
+		</a>
+	</li>
+	<li>
+		<a href="./Especiales">
+			Especiales
+		</a>
+	</li>
+	<li>
+		<a href="./Html">
+			Html
+		</a>
+	</li>
+	<li>
+		<a href="./Jscript">
+			Jscript
+		</a>
+	</li>
+	<li>
+		<a href="./Php">
+			Php
+		</a>
+	</li>
 </body>
 </html>
