--- a/Jscript/index.html
+++ b/Jscript/index.html
@@ -51,6 +51,14 @@
 		<li>
 			<a href="./js11_formConfirmacion">FormConfirmacion</a>
 		</li>
+
+		<li>
+			<a href="./js12_validacion">Validacion</a>
+		</li>
+
+		<li>
+			<a href="./js13_formABM">Form ABM</a>
+		</li>
 	</ul>
 
 </body>
