--- a/Jscript/index.html
+++ b/Jscript/index.html
@@ -59,6 +59,18 @@
 		<li>
 			<a href="./js13_formABM">Form ABM</a>
 		</li>
+
+		<li>
+			<a href="./js14_location">Location</a>
+		</li>
+
+		<li>
+			<a href="./js15_conmutacionClase">Conmutacion de clase</a>
+		</li>
+
+		<li>
+			<a href="./js16_creacionObjetos">Creacion de objetos</a>
+		</li>
 	</ul>
 
 </body>
