--- a/Php/index.html
+++ b/Php/index.html
@@ -9,6 +9,7 @@
 	<h1>Lista de ejercicios PHP</h1>
 	<ul>
 		<li> <a href="./ejer01base">Ejer01Base</a></li>
+		<li><a href="./ejer02Inc">Ejer02Include</a></li>
 
 	</ul>
 
