--- a/Php/index.html
+++ b/Php/index.html
@@ -10,6 +10,8 @@
 	<ul>
 		<li> <a href="./ejer01base">Ejer01Base</a></li>
 		<li><a href="./ejer02Inc">Ejer02Include</a></li>
+		<li><a href="./ejer03Require">Ejer03Require</a></li>
+		<li><a href="./ejer04VariablesServer">Ejer04VariablesDelServidor</a></li>
 
 	</ul>
 
