--- a/Php/index.html
+++ b/Php/index.html
@@ -12,6 +12,7 @@
 		<li><a href="./ejer02Inc">Ejer02Include</a></li>
 		<li><a href="./ejer03Require">Ejer03Require</a></li>
 		<li><a href="./ejer04VariablesServer">Ejer04VariablesDelServidor</a></li>
+		<li><a href="./ejer05VariablesObjeto">Ejer05VariablesObjeto</a></li>
 
 	</ul>
 
