--- a/Php/index.html
+++ b/Php/index.html
@@ -13,6 +13,9 @@
 		<li><a href="./ejer03Require">Ejer03Require</a></li>
 		<li><a href="./ejer04VariablesServer">Ejer04VariablesDelServidor</a></li>
 		<li><a href="./ejer05VariablesObjeto">Ejer05VariablesObjeto</a></li>
+		<li><a href="./ejer06Formulario">Ejer06Formulario</a></li>
+		<li><a href="./ejer07FormToEncrypt">Ejer07FormToEncrypt</a></li>
+		<li><a href="./ejer08Ajax">Ejer08Ajax</a></li>
 
 	</ul>
 
